--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,kotlin,gradle
 
 ### Intellij ###
-*/.idea/
+.idea/
 
 # CMake
 cmake-build-*/
